--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1732,7 +1732,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ff9ffc;
+  background: #944faa;
 }
 .feed-link,
 .chat {
